--- a/css/main.css
+++ b/css/main.css
@@ -17,12 +17,14 @@ header {
 main {
   width: 100%;
   display: inline-block;
-  position: relative;
-  padding: 0;
+  box-sizing: border-box;
+  position: absolute;
+  padding: 3rem 13rem;
   margin: 0;
 }
 
 /*SECTIONS*/
+
 .sections {
   background-color: #455A64;
   box-sizing: border-box;
@@ -30,14 +32,14 @@ main {
   padding: 2rem;
   width: 40rem;
   display: inline-block;
-  margin: 5rem;
 }
 
 /*TIPOGRAFIAS*/
 
-.font1 {
-  font-family: 'Quicksand', sans-serif;
-  color: white;
+.font {
+  font-family: 'Nunito', sans-serif;
+  font-size: 12pt;
+  color: #455A64;
 }
 
 /*PROFILE*/
@@ -49,8 +51,9 @@ section#profile {
 /*SECTION OF THE FORM*/
 section#section-of-the-form {
   box-sizing: border-box;
-  position: absolute;
-  top: 0;
+  position: relative;
+  left: 10rem;
+  top: -1.5rem;
   width: 60rem;
   font-family: 'Quicksand', sans-serif;
 }
@@ -72,4 +75,31 @@ button {
   padding: 1rem 2rem;
   font-size: 12pt;
   margin-top: 1rem;
+  font-family: 'Quicksand', sans-serif;
+  color: white;
+}
+
+
+/*SECTION "NEW TWETT"*/
+.new-tweet-width {
+  background-color: #455A64;
+  box-sizing: border-box;
+  padding: 1rem;
+  width: 80rem;
+  border-radius: .5rem;
+}
+
+.container-tweet-text {
+  width: 50rem;
+  height: auto;
+  word-wrap: break-word;
+  background-color: white;
+  border-radius: .3rem;
+  padding: .5rem;
+}
+
+.position {
+  margin: 2rem;
+  position: relative;
+  left: -2rem;
 }
