--- a/css/main.css
+++ b/css/main.css
@@ -6,12 +6,26 @@ html {
 body {
   margin: 0;
   padding: 0;
+  background-image: url(https://www.photomonitor.co.uk/okeeffe/Pedernal-1945.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+
 }
 
 header {
-  background-color: #29B6F6;
+  background-color: rgba(41, 182, 246, .9);
   height: 8rem;
   width: 100%;
+  position: fixed;
+  z-index: 1;
+  box-shadow: 2px 2px 5px rgba(93, 109, 126, .9);
+}
+
+header img {
+  width: 20%;
+  position: relative;
+  top: 15%;
+  left: 40%;
 }
 
 main {
@@ -19,6 +33,7 @@ main {
   display: inline-block;
   box-sizing: border-box;
   position: absolute;
+  top: 9rem;
   padding: 3rem 13rem;
   margin: 0;
 }
@@ -26,12 +41,13 @@ main {
 /*SECTIONS*/
 
 .sections {
-  background-color: #455A64;
+  background-color: rgba(250, 250, 250,.9);
   box-sizing: border-box;
   border-radius: 1rem;
   padding: 2rem;
   width: 40rem;
   display: inline-block;
+  box-shadow: 2px 2px 5px rgba(23, 32, 42, .9);
 }
 
 /*TIPOGRAFIAS*/
@@ -53,7 +69,7 @@ section#section-of-the-form {
   box-sizing: border-box;
   position: relative;
   left: 10rem;
-  top: -1.5rem;
+  top: -2rem;
   width: 60rem;
   font-family: 'Quicksand', sans-serif;
 }
@@ -64,6 +80,7 @@ textarea {
   font-size: 12pt;
   outline: none;
   box-sizing: border-box;
+  border: none;
   padding: 1rem;
   margin-bottom: 1rem;
 }
@@ -82,20 +99,22 @@ button {
 
 /*SECTION "NEW TWETT"*/
 .new-tweet-width {
-  background-color: #455A64;
+  background-color: rgba(235, 245, 251,.9);
   box-sizing: border-box;
   padding: 1rem;
   width: 80rem;
   border-radius: .5rem;
+  box-shadow: 2px 2px 5px rgba(23, 32, 42, .9);
 }
 
 .container-tweet-text {
-  width: 50rem;
+  width: 78rem;
   height: auto;
   word-wrap: break-word;
   background-color: white;
+  box-sizing: border-box;
   border-radius: .3rem;
-  padding: .5rem;
+  padding: 2rem;
 }
 
 .position {
